<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/breakingNewsFragment"
        android:title="@string/breaking_news"
        android:icon="@drawable/baseline_newspaper_24" />

    <item android:id="@+id/savedNewsFragment"
        android:title="@string/saved_news"
        android:icon="@drawable/baseline_favorite_24" />

    <item
        android:id="@+id/pastEventsFragment"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/past_events" />

    <item android:id="@+id/searchNewsFragment"
        android:title="@string/Search_news"
        android:icon="@drawable/baseline_manage_search_24" />

    <item android:id="@+id/themeswicthFragment"
        android:title="@string/dark_mode"
        android:icon="@drawable/baseline_swipe_down_24" />


</menu>