<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ArticleFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="event_image" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ivArticleImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:text="@string/dicoding" />

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/onwer"
                android:textSize="16sp"
                android:padding="16dp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:text="@string/Times" />


            <TextView
                android:id="@+id/tvRemainingQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDate"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/size"
                android:textSize="16sp"
                android:padding="16dp" />


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvRemainingQuota"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:text="@string/description" />



            <Button
                android:id="@+id/btnEventLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openlink"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="?attr/android:textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_favorite_24"
        android:contentDescription="Favorite"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
